# cookbook_config

./: .gitignore  README.md  hello.py  package-lock.json  pyproject.toml  requirements.txt  setup.py
config/: logging.conf  pipeline_config.yaml
notebooks/: dashboard.py  dev_workflow.ipynb  run_pipeline.ipynb  widget.ipynb
scripts/: run_pipeline.py
src/ai_cookbook/: config.py  pipeline_config.yaml
src/ai_cookbook/functions/: chunking.py  metadata.py  parsing.py
src/ai_cookbook/logging/: logger.py
src/ai_cookbook/metadata/: manager.py
src/ai_cookbook/pipeline/: __init__.py  dag.py  data_source.py  ingestion.py  intermediate_result.py  models.py  output.py  pipeline.py  processing_step.py  result.py  validation.py  vectorsearch.py
src/functions/: parsing.py
src/genai_cookbook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/logging/: logger.py
src/pipeline/: dag.py  data_source.py  models.py  output.py  pipeline.py  processing_step.py  validation.py  vector_index.py
tests/: test_metadata.py  test_output.py  test_pipeline.py  test_processing_step.py  test_validation.py
