[project]
name = "ai-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gaic-widget",
    "databricks-sdk>=0.36.0",
    "mlflow>=2.17.1",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "rich>=13.9.3",
    "typing-extensions>=4.12.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
gaic-widget = { workspace = true }

[tool.uv.workspace]
members = ["packages/gaic-widget"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
